Finish implementation / Start testing

--- a/dogs/src/main/resources/application.properties
+++ b/dogs/src/main/resources/application.properties
@@ -1,4 +1,23 @@
-spring.r2dbc.url=r2dbc:postgres://localhost/postgres
+# R2DBC PostgreSQL Connection
+spring.r2dbc.url=r2dbc:postgresql://localhost:5432/postgres
 spring.r2dbc.username=postgres
 spring.r2dbc.password=postgres
+
+# SQL schema initialization
 spring.sql.init.mode=always
+
+# Enable caching with Caffeine
+spring.cache.type=caffeine
+spring.cache.caffeine.spec=maximumSize=100,expireAfterAccess=300s
+
+# Expose metrics for monitoring caching
+management.metrics.enable.cache=true
+management.endpoints.web.exposure.include=*
+management.metrics.export.prometheus.enabled=true
+management.endpoint.prometheus.enabled=true
+
+# Logging for debugging SQL queries via R2DBC
+logging.level.org.springframework.r2dbc=DEBUG
+logging.level.org.springframework.cache=DEBUG
+logging.level.org.springframework.boot.actuate=DEBUG
+logging.level.io.micrometer.core.instrument.binder.cache=DEBUG
